<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:focusable="true"
	android:focusableInTouchMode="true"
	tools:context=".activities.LoginActivity">

	<LinearLayout
		android:id="@+id/linearlayout_login_welcome"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/textinputlayout_login_search"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:layout_width="@dimen/size_login_icon"
			android:layout_height="@dimen/size_login_icon"
			android:layout_marginBottom="@dimen/margin_login_pleaselogin_top"
			android:contentDescription="@null"
			app:srcCompat="@drawable/settings_about_app_icon" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_welcome"
			android:textAlignment="center"
			android:textColor="?android:attr/textColorPrimary"
			android:textSize="@dimen/textsize_login_welcome" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_login_pleaselogin_top"
			android:text="@string/login_please_log_in"
			android:textAlignment="center" />
	</LinearLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recyclerview_login_search_results"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/textinputlayout_login_search"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

	</androidx.recyclerview.widget.RecyclerView>

	<TextView
		android:id="@+id/textview_login_search_message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_no_results"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/textinputlayout_login_search"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ProgressBar
		android:id="@+id/progressbar_login_search_loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/textinputlayout_login_search"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textinputlayout_login_search"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_login_input_horizontal"
		android:layout_marginEnd="@dimen/margin_login_input_horizontal"
		android:layout_marginBottom="8dp"
		app:layout_constraintBottom_toTopOf="@+id/button_login_scan_code"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edittext_login_search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_search_by_school_name_or_address"
			android:nextFocusLeft="@id/edittext_login_search"
			android:nextFocusUp="@id/edittext_login_search"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_login_scan_code"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_login_input_horizontal"
		android:layout_marginEnd="@dimen/margin_login_input_horizontal"
		android:layout_marginBottom="8dp"
		android:text="@string/login_scan_code"
		app:layout_constraintBottom_toTopOf="@+id/button_login_manual_data_input"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/button_login_manual_data_input"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_login_input_horizontal"
		android:layout_marginEnd="@dimen/margin_login_input_horizontal"
		android:layout_marginBottom="8dp"
		android:text="@string/login_manual_data_input"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
